2004-05-05  James Henstridge  <james@daa.com.au>

	* Makefile.am: get rid of intltool files on "make distclean".

	* gnome-data/Makefile.am (CLEANFILES): get rid of .soundlist files
	on "make clean".

	* schemas/Makefile.am (CLEANFILES): get rid of .schemas files in
	"make clean".

	* monikers/Makefile.am (CLEANFILES): don't use += before =.

	* doc/reference/Makefile.am: update to use gtk-doc.make
	boilerplate.

	* Makefile.am: require Automake >= 1.7, pass --enable-gtk-doc
	during "make distcheck".

	* configure.in: update to use more modern autoconf features.  Use
	GTK_DOC_CHECK macro to find gtk-doc.

	* autogen.sh (REQUIRED_AUTOMAKE_VERSION): require Automake >= 1.7

2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-init.c: (safe_mkdir), (libgnome_userdir_setup):
	Add a new mkdir function that's safe against trailing slashes and use it.
	(#106117, Julio Merino)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-help.c (locate_help_file): First try locating
	the file without appending an extension (#136242, Toshio Kuratomi)

	* libgnome/gnome-score.c (gnome_score_get_notable): Set
	scoretimes to NULL, (#117305, Steve Chaplin).

	* gnome-data/Makefile.am:
	* libgnome/gnome-program.c: (gnome_program_preinit):
	* libgnome/gnome-util.c: (gnome_unsetenv):
	* schemas/Makefile.am:
	A couple of portability fixes (#131394, The Written Word)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_get_property):
	Fix memory leak. (#135773, Christian Persche)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* doc/reference/Makefile.am:
	* doc/reference/libgnome-docs.sgml:
	* doc/reference/version.xml.in:
	Put version number in reference docs.
	(#125759, Steve Chaplin)
	
2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-sound.c: Fix crash when reading invalid
	audio files. (#124519, Chris Lahey)

=================== 2.6.1.1 ===================
