@@ -23,7 +23,6 @@ INCLUDES = \
 	-DLIBGNOME_DATADIR=\""$(datadir)"\"			\
 	-DLIBGNOME_BINDIR=\""$(bindir)"\"			\
 	-DLIBGNOME_LOCALSTATEDIR=\""$(localstatedir)"\"		\
-	-DLIBGNOME_LOCALEDIR=\""$(gnomelocaledir)"\"		\
 	-DLIBGNOME_SYSCONFDIR=\""$(sysconfdir)"\"		\
 	-DVERSION=\""$(VERSION)"\"				\
 	-DGNOMEVFSVERSION=\"$(GNOME_VFS_VERSION)\"		\
@@ -64,9 +63,6 @@ libgnome_headers = \
 	gnome-init.h		\
 	libgnome.h
 
-$(libgnome_2_la_OBJECTS):	  \
-	$(srcdir)/libgnometypebuiltins.c
-
 libgnomeinclude_HEADERS = \
 	libgnometypebuiltins.h	\
 	$(libgnome_headers)
@@ -77,27 +73,27 @@ gnome_open_SOURCES = \
 gnome_open_LDADD = \
 	libgnome-2.la
 
-# all autogenerated files need to be generated in the srcdir,
-# so old versions get remade and are not confused with newer
-# versions in the build dir. thus a development setup requires
-# srcdir to be writable, passing --disable-rebuilds to
-# ../configure will supress all autogeneration rules.
-$(srcdir)/stamp-libgnome.defs: @REBUILD@ Makefile.am libgnome.defs libgnome-boxed.defs $(libgnome_headers)
-	cd $(srcdir) \
+libgnometypebuiltins.h: stamp-libgnometypebuiltins.h
+	@true
+stamp-libgnometypebuiltins.h: @REBUILD@ $(libgnome_headers)
+	(cd $(srcdir) \
 	&& glib-mkenums \
-			--comments ";; @comment@" \
-			--fprod "; enumerations from \"@filename@\"\n " \
-			--vhead "(define-@type@ @EnumName@" \
-			--vprod "   (@valuenick@ @VALUENAME@)" \
-			--vtail ")" \
-		$(libgnome_headers) > xgen-gdef \
-	&& cat libgnome-boxed.defs >> xgen-gdef \
-	&& (cmp -s xgen-gdef libgnome.defs || cp xgen-gdef libgnome.defs) \
-	&& rm -f xgen-gdef \
+			--fhead "#ifndef __LIBGNOMETYPEBUILTINS_H__\n" \
+			--fhead "#define __LIBGNOMETYPEBUILTINS_H__ 1\n\n" \
+			--fhead "#include <libgnome/libgnome.h>\n\n" \
+			--fhead "G_BEGIN_DECLS\n\n" \
+			--ftail "G_END_DECLS\n\n" \
+			--ftail "#endif /* __LIBGNOMETYPEBUILTINS_H__ */\n" \
+			--fprod "\n/* --- @filename@ --- */" \
+			--eprod "#define GNOME_TYPE_@ENUMSHORT@ @enum_name@_get_type()\n" \
+			--eprod "GType @enum_name@_get_type (void);\n" \
+		$(libgnome_headers) ) > xgen-gth \
+	&& (cmp -s xgen-gth libgnometypebuiltins.h || cp xgen-gth libgnometypebuiltins.h) \
+	&& rm -f xgen-gth \
 	&& echo timestamp > $(@F)
 
-$(srcdir)/libgnometypebuiltins.c: @REBUILD@ Makefile.am $(libgnome_headers)
-	cd $(srcdir) \
+libgnometypebuiltins.c: @REBUILD@ $(libgnome_headers)
+	(cd $(srcdir) \
 	&& glib-mkenums \
 			--fhead "#include <glib-object.h>\n" \
 			--fhead "#include \"libgnometypebuiltins.h\"\n\n" \
@@ -110,34 +106,27 @@ $(srcdir)/libgnometypebuiltins.c: @REBUILD@ Makefile.am $(libgnome_headers)
 			--vtail "  if (!type)\n" \
 			--vtail "    type = g_@type@_register_static (\"@EnumName@\", _@enum_name@_values);\n\n" \
 			--vtail "  return type;\n}\n\n" \
-		$(libgnome_headers) > xgen-gtbec \
-	&& cp xgen-gtbec $(@F) \
-	&& rm -f xgen-gtbec
+		$(libgnome_headers) ) > xgen-gtc \
+	&& cp xgen-gtc $(@F) \
+	&& rm -f xgen-gtc
 
-$(srcdir)/libgnometypebuiltins.h: @REBUILD@ Makefile.am $(libgnome_headers)
-	cd $(srcdir) \
-	&& glib-mkenums \
-			--fhead "#ifndef __LIBGNOMETYPEBUILTINS_H__\n" \
-			--fhead "#define __LIBGNOMETYPEBUILTINS_H__ 1\n\n" \
-			--fhead "#include <libgnome/libgnome.h>\n\n" \
-			--fhead "G_BEGIN_DECLS\n\n" \
-			--ftail "G_END_DECLS\n\n" \
-			--ftail "#endif /* __LIBGNOMETYPEBUILTINS_H__ */\n" \
-			--fprod "\n/* --- @filename@ --- */" \
-			--eprod "#define GNOME_TYPE_@ENUMSHORT@ @enum_name@_get_type()\n" \
-			--eprod "GType @enum_name@_get_type (void);\n" \
-		$(libgnome_headers) > xgen-gth \
-	&& cp xgen-gth $(@F) \
-	&& rm -f xgen-gth
+BUILT_SOURCES = libgnometypebuiltins.h libgnometypebuiltins.c
+
+MAINTAINERCLEANFILES = stamp-libgnometypebuiltins.h \
+  $(BUILT_SOURCES)
+CLEANFILES = xgen-gth xgen-gtc
+
+# if srcdir!=builddir, clean out maintainer-clean files from builddir
+# this allows dist to pass.
+distclean-local:
+	if test $(srcdir) != .; then \
+	  rm -f $(MAINTAINERCLEANFILES); \
+	fi
 
 EXTRA_DIST = \
 	libgnome-2.0.pc.in		\
 	libgnome-2.0-uninstalled.pc.in	\
 	parse-path.cP
-
-BUILT_SOURCES = \
-	libgnometypebuiltins.h		\
-	libgnometypebuiltins.c		
 
 libgnome_2_la_LDFLAGS = \
 	-version-info $(LIBGNOME_CURRENT):$(LIBGNOME_REVISION):$(LIBGNOME_AGE) \
