@@ -1,3 +1,12 @@
+2004-05-07  James Henstridge  <james@daa.com.au>
+
+	* configure.in: remove some env variables that weren't being used.
+	Use AM_GLIB_DEFINE_LOCALEDIR() to define the localedir, like gtk+
+	does.
+
+	* libgnome/Makefile.am: fix built sources to work correctly with
+	read only source directory.
+
 2004-05-05  James Henstridge  <james@daa.com.au>
 
 	* Makefile.am: get rid of intltool files on "make distclean".
